2015-05-04  Anthony G. Basile  <blueness@gentoo.org>

	* Makefile.am (libdw_so_SOURCES): Append $(argp_LDADD) to link
	command.

2015-04-22  Mark Wielaard  <mjw@redhat.com>

	* memory-access.h (__libdw_max_len_leb128): Take type_len as argument.
	(__libdw_max_len_uleb128): New function.
	(__libdw_max_len_sleb128): Likewise.
	(__libdw_get_uleb128): Use __libdw_max_len_uleb128.
	(__libdw_get_sleb128): Use __libdw_max_len_sleb128.

2015-04-21  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getmacros.c (read_macros): Allocate attributes dynamically
	when there are more than 8.

2015-04-01  Petr Machata  <pmachata@redhat.com>

	* libdwP.h (DWARF_E_NOT_CUDIE): New enumerator.
	(is_cudie): New function.
	* dwarf_error.c (errmsgs): Add message for DWARF_E_NOT_CUDIE.
	* dwarf_getsrcfiles.c (dwarf_getsrcfiles): Call is_cudie instead
	of white-listing valid tags.
	* dwarf_getsrclines.c (dwarf_getsrclines): Likewise.

2015-03-18  Petr Machata  <pmachata@redhat.com>

	* Makefile.am (pkginclude_HEADERS): Add known-dwarf.h.
	(EXTRA_DIST): Remove known-dwarf.h.

2015-02-09  Mark Wielaard  <mjw@redhat.com>

	* dwarf.h: Add DW_LANG_Fortran03 and DW_LANG_Fortran08.
	* dwarf_aggregate_size.c (array_size): Recognize array lower bound
	for new Fortran language codes is 1.

2015-02-09  Mark Wielaard  <mjw@redhat.com>

	* dwarf.h: Add DW_TAG_atomic_type.
	* libdw.h (dwarf_peel_type): Document DW_TAG_atomic_type.
	* dwarf_peel_type.c (dwarf_peel_type): Handle DW_TAG_atomic_type.

2015-02-11  Josh Stone  <jistone@redhat.com>

	* encoded-value.h (read_encoded_value): Initialize value.

2015-02-11  Petr Machata  <pmachata@redhat.com>

	* dwarf_ranges.c (dwarf_ranges): Do not bail out when neither
	DW_AT_entry_pc nor DW_AT_low_pc are available.  Instead remember
	the fact in *BASEP and bail out later if it hasn't been updated by
	__libdw_read_begin_end_pair_inc.

2014-12-24  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getsrc_die.c (dwarf_getsrc_die): Return the last line record